Añadidore-ranker training & evaluation y calibrador

--- a/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
+++ b/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "621ad324",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "print(\"Preguntas cargadas:\", len(qa_eval_set))\n",
     "\n",
     "client = OpenAI(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=\"api_key\",\n",
     "    base_url=\"https://api.groq.com/openai/v1\"\n",
     ")\n"
    ]
@@ -1448,7 +1448,7 @@
     "# Configurar Groq LLaMA-3 como LLM backend\n",
     "llm = ChatOpenAI(\n",
     "    model=\"llama-3.1-8b-instant\",\n",
-    "    api_key=\"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\",\n",
+    "    api_key=\"api_key\",\n",
     "    base_url=\"https://api.groq.com/openai/v1\"\n",
     ")\n",
     "\n",
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "ab439515",
    "metadata": {},
    "outputs": [],
@@ -1589,7 +1589,7 @@
     "\n",
     "# --- Cliente Groq (API key desde variable de entorno o hardcodeada en caso de emergencia) ---\n",
     "client = OpenAI(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=\"api_key\",\n",
     "    base_url=\"https://api.groq.com/openai/v1\"\n",
     ")\n",
     "\n",
@@ -3031,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "4f506110",
    "metadata": {},
    "outputs": [],
@@ -3048,7 +3048,7 @@
     "MODELS_PATH = \"../models/\"\n",
     "\n",
     "client = OpenAI(\n",
-    "    api_key=\"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\",\n",
+    "    api_key=\"api_key\",\n",
     "    base_url=\"https://api.groq.com/openai/v1\"\n",
     ")\n",
     "\n",
