--- a/notebooks/04_Evaluacion_Recuperacion_TFM_RAG_NOR.ipynb
+++ b/notebooks/04_Evaluacion_Recuperacion_TFM_RAG_NOR.ipynb
@@ -1597,10 +1597,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "77853c5a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa8708d0",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "resultados = {\n",
+    "    \"BM25\":      {\"recall\":0.620, \"ndcg\":0.531, \"map\":0.500},\n",
+    "    \"MiniLM\":    {\"recall\":0.380, \"ndcg\":0.315, \"map\":0.293},\n",
+    "    \"MPNet\":     {\"recall\":0.493, \"ndcg\":0.416, \"map\":0.389},\n",
+    "    \"Híbrido Lin (α=0.3)\": {\"recall\":0.647, \"ndcg\":0.568, \"map\":0.541},\n",
+    "    \"Híbrido Log (α=0.3)\": {\"recall\":0.667, \"ndcg\":0.582, \"map\":0.553},\n",
+    "    \"Re-ranker\": {\"recall\":0.800, \"ndcg\":0.742, \"map\":0.743}\n",
+    "}\n",
+    "\n",
+    "metricas = [\"recall\", \"ndcg\", \"map\"]\n",
+    "x = np.arange(len(metricas))\n",
+    "bar_width = 0.12\n",
+    "\n",
+    "plt.figure(figsize=(11,6))\n",
+    "\n",
+    "for i, (sistema, vals) in enumerate(resultados.items()):\n",
+    "    valores = [vals[m] for m in metricas]\n",
+    "    plt.bar(x + i*bar_width, valores, width=bar_width, label=sistema)\n",
+    "\n",
+    "plt.xticks(x + bar_width*2.5, [m.upper()+\"@3\" for m in metricas])\n",
+    "plt.ylabel('Score')\n",
+    "plt.ylim(0, 1)\n",
+    "plt.title('Comparativa de métricas en K=3')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
