--- a/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
+++ b/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
@@ -1981,8 +1981,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "53e999e2",
+   "execution_count": 136,
+   "id": "12bbd1b3",
    "metadata": {},
    "outputs": [
     {
@@ -1992,6 +1992,15 @@
       "Dataset: (3750, 11)\n",
       "\n",
       "--- Resultados en test (20%) ---\n",
+      "K=1\n",
+      "  precision: 0.667\n",
+      "  recall: 0.667\n",
+      "  ndcg: 0.667\n",
+      "  map: 0.743\n",
+      "  mrr: 0.743\n",
+      "  pdf_match: 1.000\n",
+      "\n",
+      "--- Resultados en test (20%) ---\n",
       "K=3\n",
       "  precision: 0.800\n",
       "  recall: 0.800\n",
@@ -1999,17 +2008,54 @@
       "  map: 0.743\n",
       "  mrr: 0.743\n",
       "  pdf_match: 1.000\n",
-      "Fold 1 → P=0.800, Rec=0.800, nDCG=0.742, MAP=0.743, MRR=0.743, PDF=1.000\n",
-      "Fold 2 → P=0.700, Rec=0.700, nDCG=0.646, MAP=0.637, MRR=0.637, PDF=1.000\n",
-      "Fold 3 → P=0.733, Rec=0.733, nDCG=0.630, MAP=0.622, MRR=0.622, PDF=1.000\n",
-      "Fold 4 → P=0.667, Rec=0.667, nDCG=0.609, MAP=0.615, MRR=0.615, PDF=1.000\n",
-      "Fold 5 → P=0.433, Rec=0.433, nDCG=0.367, MAP=0.387, MRR=0.387, PDF=1.000\n",
+      "\n",
+      "--- Resultados en test (20%) ---\n",
+      "K=10\n",
+      "  precision: 0.900\n",
+      "  recall: 0.900\n",
+      "  ndcg: 0.781\n",
+      "  map: 0.743\n",
+      "  mrr: 0.743\n",
+      "  pdf_match: 1.000\n",
+      "Fold 1 (K=1) → P=0.667, Rec=0.667, nDCG=0.667, MAP=0.743, MRR=0.743, PDF=1.000\n",
+      "Fold 2 (K=1) → P=0.567, Rec=0.567, nDCG=0.567, MAP=0.637, MRR=0.637, PDF=1.000\n",
+      "Fold 3 (K=1) → P=0.500, Rec=0.500, nDCG=0.500, MAP=0.622, MRR=0.622, PDF=1.000\n",
+      "Fold 4 (K=1) → P=0.533, Rec=0.533, nDCG=0.533, MAP=0.615, MRR=0.615, PDF=0.967\n",
+      "Fold 5 (K=1) → P=0.267, Rec=0.267, nDCG=0.267, MAP=0.387, MRR=0.387, PDF=0.967\n",
+      "\n",
+      "--- Resultados medios (5-Fold) ---\n",
+      "K=1\n",
+      "  precision: 0.507\n",
+      "  recall: 0.507\n",
+      "  ndcg: 0.507\n",
+      "  map: 0.601\n",
+      "  mrr: 0.601\n",
+      "  pdf_match: 0.987\n",
+      "Fold 1 (K=3) → P=0.800, Rec=0.800, nDCG=0.742, MAP=0.743, MRR=0.743, PDF=1.000\n",
+      "Fold 2 (K=3) → P=0.700, Rec=0.700, nDCG=0.646, MAP=0.637, MRR=0.637, PDF=1.000\n",
+      "Fold 3 (K=3) → P=0.733, Rec=0.733, nDCG=0.630, MAP=0.622, MRR=0.622, PDF=1.000\n",
+      "Fold 4 (K=3) → P=0.667, Rec=0.667, nDCG=0.609, MAP=0.615, MRR=0.615, PDF=1.000\n",
+      "Fold 5 (K=3) → P=0.433, Rec=0.433, nDCG=0.367, MAP=0.387, MRR=0.387, PDF=1.000\n",
       "\n",
       "--- Resultados medios (5-Fold) ---\n",
       "K=3\n",
       "  precision: 0.667\n",
       "  recall: 0.667\n",
       "  ndcg: 0.599\n",
+      "  map: 0.601\n",
+      "  mrr: 0.601\n",
+      "  pdf_match: 1.000\n",
+      "Fold 1 (K=10) → P=0.900, Rec=0.900, nDCG=0.781, MAP=0.743, MRR=0.743, PDF=1.000\n",
+      "Fold 2 (K=10) → P=0.767, Rec=0.767, nDCG=0.668, MAP=0.637, MRR=0.637, PDF=1.000\n",
+      "Fold 3 (K=10) → P=0.867, Rec=0.867, nDCG=0.678, MAP=0.622, MRR=0.622, PDF=1.000\n",
+      "Fold 4 (K=10) → P=0.767, Rec=0.767, nDCG=0.646, MAP=0.615, MRR=0.615, PDF=1.000\n",
+      "Fold 5 (K=10) → P=0.633, Rec=0.633, nDCG=0.438, MAP=0.387, MRR=0.387, PDF=1.000\n",
+      "\n",
+      "--- Resultados medios (5-Fold) ---\n",
+      "K=10\n",
+      "  precision: 0.787\n",
+      "  recall: 0.787\n",
+      "  ndcg: 0.642\n",
       "  map: 0.601\n",
       "  mrr: 0.601\n",
       "  pdf_match: 1.000\n",
@@ -2092,31 +2138,33 @@
     "        results.append((precision, recall, ndcg, map_score, mrr, pdf_match))\n",
     "    return np.mean(results, axis=0)\n",
     "\n",
+    "# Test split para K=1,3,10\n",
+    "for k in [1,3,10]:\n",
+    "    prec, rec, ndcg, map_score, mrr_score, pdf_match = evaluate_split(X_test_s, y_test, qids_test, clf, k=k)\n",
+    "    print(f\"\\n--- Resultados en test (20%) ---\")\n",
+    "    print(f\"K={k}\\n  precision: {prec:.3f}\\n  recall: {rec:.3f}\\n  ndcg: {ndcg:.3f}\\n  map: {map_score:.3f}\\n  mrr: {mrr_score:.3f}\\n  pdf_match: {pdf_match:.3f}\")\n",
     "\n",
-    "prec, rec, ndcg, map_score, mrr_score, pdf_match = evaluate_split(X_test_s, y_test, qids_test, clf, k=3)\n",
-    "print(\"\\n--- Resultados en test (20%) ---\")\n",
-    "print(f\"K=3\\n  precision: {prec:.3f}\\n  recall: {rec:.3f}\\n  ndcg: {ndcg:.3f}\\n  map: {map_score:.3f}\\n  mrr: {mrr_score:.3f}\\n  pdf_match: {pdf_match:.3f}\")\n",
-    "\n",
-    "#  K-Fold\n",
+    "#  K-Fold para K=1,3,10\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
-    "metrics = []\n",
-    "for fold,(train_idx,test_idx) in enumerate(kf.split(unique_qids), start=1):\n",
-    "    train_q, test_q = unique_qids[train_idx], unique_qids[test_idx]\n",
-    "    train_mask, test_mask = np.isin(qids, train_q), np.isin(qids, test_q)\n",
+    "for k in [1,3,10]:\n",
+    "    metrics = []\n",
+    "    for fold,(train_idx,test_idx) in enumerate(kf.split(unique_qids), start=1):\n",
+    "        train_q, test_q = unique_qids[train_idx], unique_qids[test_idx]\n",
+    "        train_mask, test_mask = np.isin(qids, train_q), np.isin(qids, test_q)\n",
     "\n",
-    "    X_train,y_train = X[train_mask],y[train_mask]\n",
-    "    X_test,y_test,qids_val = X[test_mask],y[test_mask],qids[test_mask]\n",
-    "    X_train_s,X_test_s = scaler.fit_transform(X_train),scaler.transform(X_test)\n",
+    "        X_train,y_train = X[train_mask],y[train_mask]\n",
+    "        X_test,y_test,qids_val = X[test_mask],y[test_mask],qids[test_mask]\n",
+    "        X_train_s,X_test_s = scaler.fit_transform(X_train),scaler.transform(X_test)\n",
     "\n",
-    "    clf_cv = LogisticRegression(class_weight=\"balanced\", max_iter=200).fit(X_train_s,y_train)\n",
-    "    fold_scores = evaluate_split(X_test_s, y_test, qids_val, clf_cv, k=3)\n",
-    "    metrics.append(fold_scores)\n",
+    "        clf_cv = LogisticRegression(class_weight=\"balanced\", max_iter=200).fit(X_train_s,y_train)\n",
+    "        fold_scores = evaluate_split(X_test_s, y_test, qids_val, clf_cv, k=k)\n",
+    "        metrics.append(fold_scores)\n",
     "\n",
-    "    print(f\"Fold {fold} → P={fold_scores[0]:.3f}, Rec={fold_scores[1]:.3f}, nDCG={fold_scores[2]:.3f}, MAP={fold_scores[3]:.3f}, MRR={fold_scores[4]:.3f}, PDF={fold_scores[5]:.3f}\")\n",
+    "        print(f\"Fold {fold} (K={k}) → P={fold_scores[0]:.3f}, Rec={fold_scores[1]:.3f}, nDCG={fold_scores[2]:.3f}, MAP={fold_scores[3]:.3f}, MRR={fold_scores[4]:.3f}, PDF={fold_scores[5]:.3f}\")\n",
     "\n",
-    "metrics = np.mean(metrics,axis=0)\n",
-    "print(\"\\n--- Resultados medios (5-Fold) ---\")\n",
-    "print(f\"K=3\\n  precision: {metrics[0]:.3f}\\n  recall: {metrics[1]:.3f}\\n  ndcg: {metrics[2]:.3f}\\n  map: {metrics[3]:.3f}\\n  mrr: {metrics[4]:.3f}\\n  pdf_match: {metrics[5]:.3f}\")\n",
+    "    metrics = np.mean(metrics,axis=0)\n",
+    "    print(f\"\\n--- Resultados medios (5-Fold) ---\")\n",
+    "    print(f\"K={k}\\n  precision: {metrics[0]:.3f}\\n  recall: {metrics[1]:.3f}\\n  ndcg: {metrics[2]:.3f}\\n  map: {metrics[3]:.3f}\\n  mrr: {metrics[4]:.3f}\\n  pdf_match: {metrics[5]:.3f}\")\n",
     "\n",
     "# entreno\n",
     "X_scaled = scaler.fit_transform(X)\n",
@@ -3429,6 +3477,137 @@
     "\n",
     "Sin embargo, el dataset usado es pequeño y limitado, por lo que el calibrador no puede considerarse un modelo autónomo ni totalmente fiable.  \n",
     "Es útil como apoyo y filtro de seguridad, pero siempre requiere verificación adicional para garantizar la calidad de las respuestas.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "7bc76498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Respuestas con re-ranker guardadas en ../results/rag_generation_reranker.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calculating scores...\n",
+      "computing bert embedding.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2e3341254604b3baa7242de89141388",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\TFM_RAG_NOR\\venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `RobertaSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing greedy matching.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a66b2d2836e4e69a43139827512c5ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Empty reference sentence detected; setting raw BERTScores to 0.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done in 343.99 seconds, 0.44 sentences/sec\n",
+      "BERTScore calculado y guardado en ../results/rag_generation_reranker_bertscore.csv\n",
+      "BERTScore medio (F1): 0.8570726919174194\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from bert_score import score\n",
+    "\n",
+    "results_reranker = []\n",
+    "\n",
+    "# Generar respuestas con el re-ranker\n",
+    "for i, entry in enumerate(qa_eval_set, start=1):\n",
+    "    query = entry[\"pregunta\"]\n",
+    "    expected = entry[\"respuesta_esperada\"]\n",
+    "\n",
+    "    chunks, hybrid_selected = retrieve_then_rerank(query, alpha=HYBRID_ALPHA, pool_k=POOL_K, top_k=TOP_K)\n",
+    "    prompt = build_prompt(query, chunks)\n",
+    "    generated = generate_response(prompt)\n",
+    "\n",
+    "    results_reranker.append({\n",
+    "        \"query_id\": f\"q{i}\",\n",
+    "        \"query\": query,\n",
+    "        \"expected\": expected,\n",
+    "        \"generated\": generated\n",
+    "    })\n",
+    "\n",
+    "df_reranker = pd.DataFrame(results_reranker)\n",
+    "csv_path = \"../results/rag_generation_reranker.csv\"\n",
+    "df_reranker.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
+    "print(f\"Respuestas con re-ranker guardadas en {csv_path}\")\n",
+    "\n",
+    "# Calcular BERTScore\n",
+    "refs = df_reranker[\"expected\"].astype(str).tolist()\n",
+    "preds = df_reranker[\"generated\"].astype(str).tolist()\n",
+    "P, R, F1 = score(preds, refs, lang=\"en\", verbose=True)\n",
+    "\n",
+    "df_reranker[\"bertscore_precision\"] = P.tolist()\n",
+    "df_reranker[\"bertscore_recall\"]    = R.tolist()\n",
+    "df_reranker[\"bertscore_f1\"]        = F1.tolist()\n",
+    "\n",
+    "out_path = \"../results/rag_generation_reranker_bertscore.csv\"\n",
+    "df_reranker.to_csv(out_path, index=False, encoding=\"utf-8\")\n",
+    "print(f\"BERTScore calculado y guardado en {out_path}\")\n",
+    "print(\"BERTScore medio (F1):\", df_reranker[\"bertscore_f1\"].mean())\n"
    ]
   }
  ],
