--- a/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
+++ b/notebooks/05_RAG_Generation_TFM_RAG_NOR.ipynb
@@ -3185,7 +3185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "2fdc7a46",
    "metadata": {},
    "outputs": [],
@@ -3219,7 +3219,7 @@
     "\n",
     "# modelos\n",
     "mpnet_model = SentenceTransformer(\"sentence-transformers/all-mpnet-base-v2\")\n",
-    "client = OpenAI(api_key=\"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\", base_url=\"https://api.groq.com/openai/v1\")\n",
+    "client = OpenAI(api_key=\"api_key\", base_url=\"https://api.groq.com/openai/v1\")\n",
     "\n",
     "with open(os.path.join(MODELS_PATH, \"reranker\", \"reranker.pkl\"), \"rb\") as f:\n",
     "    reranker = pickle.load(f)\n",
